adds whole dir to /src

--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,8 +1,7 @@
 FROM python:3.6-alpine3.8
 LABEL maintainer="josh@userdel.com"
 
-COPY ./30_days_of_code /src/30_days_of_code
-COPY ./algorithms /src/algorithms
+COPY . /src/
 
 WORKDIR /src
 
